[package]
name = "weekend_path_tracer"
version = "0.1.0"
authors = ["Nathan Glenn <garfieldnate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.16.0"
rand = "0.7"
dyn-clone = "1.0.1"
rayon = "1.1"
indicatif = {version = "*", features = ["with_rayon"]}
image = "0.23.4"
